# project7

./: .coverage  README.md  pyproject.toml
src/: BaseProduct.py  LawnGrass.py  Product_iterator.py  Smartphone.py  category.py  main.py  print_mixin.py  product.py  utils.py  сategory.py
tests/: conftest.py  test_category.py  test_lawn_grass.py  test_main.py  test_print_mixin.py  test_product.py  test_smartphone.py
